{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 67,
  "lineage": "a11be8a2-a80b-edf4-79b2-87e8cade74bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:343889984927:instance/i-05140df36c4f667cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05140df36c4f667cd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_bastion",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08c3c1f286fb4b837",
            "private_dns": "ip-192-168-0-254.ec2.internal",
            "private_ip": "192.168.0.254",
            "public_ip": "54.234.7.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07018497b22084b51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d332cf13e485d89c",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001ecc42f1e2711e4",
              "sg-0d73ed3d59cc86c4c"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_bastion",
            "aws_security_group.sg_internal",
            "aws_subnet.subnet_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_ex1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:343889984927:instance/i-0ae5becc55f2eb4d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae5becc55f2eb4d1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_instances",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071716161677a44ae",
            "private_dns": "ip-192-168-0-10.ec2.internal",
            "private_ip": "192.168.0.10",
            "public_ip": "3.90.85.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c33a8f4f593a6147",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d332cf13e485d89c",
            "tags": {
              "Name": "instance_ex1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d73ed3d59cc86c4c",
              "sg-0d7723315687ec23d"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_instance_ex1",
            "aws_security_group.sg_internal",
            "aws_subnet.subnet_example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:internet-gateway/igw-010d6d759303a312a",
            "id": "igw-010d6d759303a312a",
            "owner_id": "343889984927",
            "vpc_id": "vpc-0b45bfcc94bb3a794"
          },
          "dependencies": [
            "aws_vpc.vpc_exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "wan_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-010d6d759303a312a",
            "id": "r-rtb-0de75008893815eba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de75008893815eba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.vpc_exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:security-group/sg-001ecc42f1e2711e4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-001ecc42f1e2711e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_bastion",
            "name_prefix": "",
            "owner_id": "343889984927",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b45bfcc94bb3a794"
          },
          "dependencies": [
            "aws_vpc.vpc_exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_instance_ex1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:security-group/sg-0d7723315687ec23d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d7723315687ec23d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_instance_ex1",
            "name_prefix": "",
            "owner_id": "343889984927",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b45bfcc94bb3a794"
          },
          "dependencies": [
            "aws_vpc.vpc_exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:security-group/sg-0d73ed3d59cc86c4c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d73ed3d59cc86c4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_internal",
            "name_prefix": "",
            "owner_id": "343889984927",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b45bfcc94bb3a794"
          },
          "dependencies": [
            "aws_vpc.vpc_exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:subnet/subnet-0d332cf13e485d89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0d332cf13e485d89c",
            "map_public_ip_on_launch": true,
            "owner_id": "343889984927",
            "vpc_id": "vpc-0b45bfcc94bb3a794"
          },
          "dependencies": [
            "aws_vpc.vpc_exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_exemple",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343889984927:vpc/vpc-0b45bfcc94bb3a794",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-012042716f85368b1",
            "default_route_table_id": "rtb-0de75008893815eba",
            "default_security_group_id": "sg-0fd846df8db60d909",
            "dhcp_options_id": "dopt-87871bfd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b45bfcc94bb3a794",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0de75008893815eba",
            "owner_id": "343889984927"
          }
        }
      ]
    }
  ]
}